# M1kanN-OpenGL-Renderer-Engine

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  res.qrc
assets/qss/: flatwhite.css  lightblue.css  materialDark.css  psblack.css
assets/shaders/: baseModel.frag  baseModel.vert  baseShader.vert  blinn_phong.frag  blinn_phong.vert  coordShader.frag  coordinate.frag  defaultModelShader.frag  defaultModelShader.vert  defaultShader.frag  defaultShader.vert  defaultShapeShader.frag  defaultShapeShader.vert  defaultTextureShader.frag  outlineShader.frag  reflectionShader.frag  refractionShader.frag
assets/shaders/post_processing/: postProcessing.frag  postProcessing.vert
assets/shaders/skybox/: skybox.frag  skybox.vert
src/: camera.cpp  engine.cpp  gl_manager.cpp  mainwindow.cpp  mesh.cpp  model.cpp  resource_manager.cpp  shader.cpp  shape.cpp  texture2d.cpp
src/environment/: light.cpp  skybox.cpp
src/include/: camera.hpp  data_structures.hpp  gl_configure.hpp  gl_manager.hpp  m_type.hpp  mainwindow.hpp  mesh.hpp  model.hpp  shader.hpp  shape.hpp  texture2d.hpp
src/include/environment/: light.hpp  skybox.hpp
src/include/object/: coordinate.hpp  game_object.hpp  mesh.hpp  model.hpp  object.hpp  shape.hpp  shape_data.hpp
src/include/post_processing/: post_process_screen.hpp
src/include/skybox/: sky_box.hpp
src/include/ui/: mainwindow.hpp
src/include/utils/: camera.hpp  resource_manager.hpp  shader.hpp  texture2d.hpp  util_algorithms.hpp
src/object/: coordinate.cpp  game_object.cpp  mesh.cpp  model.cpp  object.cpp  shape.cpp
src/post_processing/: post_process_screen.cpp
src/skybox/: sky_box.cpp
src/ui/: mainwindow.cpp  mainwindow.ui
src/utils/: camera.cpp  resource_manager.cpp  shader.cpp  texture2d.cpp  util_algorithms.cpp
